--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,5 @@
+# ** If this file is changed, also change Dockerfile.deploy (no way to extend Dockerfiles :/) **
+
 # Reference: https://docs.docker.com/compose/django/
 FROM python:3.9.1-buster
 ENV PYTHONUNBUFFERED=1
