Persist Caddy data volume (no longer behind a reverse proxy so now it requests HTTPS certs)

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -21,3 +21,8 @@ services:
     environment:
       - DOMAIN=${DOMAIN}
       - API_HOSTNAME=cbr_django
+    volumes:
+      - cbr_caddy_data:/data
+
+volumes:
+  cbr_caddy_data:
