--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,8 @@ services:
     environment:
       - LISTEN_PORT=8000
       - DEBUG=yes
+    volumes:
+      - ./server:/code
   postgres:
     ports:
       - "5432:5432"
