Add DOMAIN variable to test caddy job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,8 @@ test caddy:
         - caddy/**/*
         - .gitlab-ci.yml
       when: always
+  variables:
+    DOMAIN: "example.com"
   script:
     - caddy validate --config caddy/Caddyfile
 
