--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -154,11 +154,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-         release {
-        storeFile file('cbr_release.keystore')
-        storePassword 'hhaLogin'
-        keyAlias 'cbr_release'
-        keyPassword 'hhaLogin'
+        release {
+            if (project.hasProperty('CBR_UPLOAD_STORE_FILE')) {
+                storeFile file(CBR_UPLOAD_STORE_FILE)
+                storePassword CBR_UPLOAD_STORE_PASSWORD
+                keyAlias CBR_UPLOAD_KEY_ALIAS
+                keyPassword CBR_UPLOAD_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
@@ -168,7 +170,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
