renamed visits, referrals hook

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,7 +2,7 @@
     "main": "./index.ts",
     "scripts": {
         "start": "react-native start",
-        "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz && expo r -c",
+        "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz",
         "build-android-apk": "APP_ENV=prod expo build:android -t apk",
         "build-android-app-bundle": "APP_ENV=prod expo build:android -t app-bundle",
         "publish-expo": "APP_ENV=prod expo publish",
