--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
+        "@types/axios": "^0.14.0",
         "@types/jest": "^26.0.20",
         "@types/node": "^12.19.14",
         "@types/react": "^16.14.2",
@@ -37,14 +38,13 @@
         "react-scripts": "4.0.1",
         "recharts": "^2.0.8",
         "socket.io-client": "^4.3.2",
-        "typescript": "~4.0.0",
         "web-vitals": "^0.2.4",
         "yup": "^0.32.8"
     },
     "scripts": {
         "start": "craco start",
         "build": "craco build",
-        "test": "craco test",
+        "test": "jest",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -66,6 +66,8 @@
         ]
     },
     "devDependencies": {
-        "prettier": "2.3.0"
+        "jest": "^26.6.0",
+        "prettier": "2.3.0",
+        "typescript": "^4.5.2"
     }
 }
