Attempt to fix sockets on staging

--- a/common/package.json
+++ b/common/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@types/history": "^4.7.9",
         "async-mutex": "^0.3.1",
+        "axios": "^0.24.0",
         "formik": "^2.2.9",
         "jwt-decode": "^3.1.2",
         "socket.io-client": "^4.3.2",
