--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,13 @@ variables:
   STAGING_BRANCH: "staging"
   PROD_BRANCH: "production"
   NPM_VERSION: "7.19.0"
+  ANDROID_COMPILE_SDK: "30"
+  ANDROID_BUILD_TOOLS: "29.0.3"
+  ANDROID_SDK_TOOLS:   "7583922"
 
 build common:
   stage: build
-  image: node:14
+  image: node:16
   tags:
     - docker
   needs: []
@@ -31,31 +34,53 @@ build common:
 
 build mobile:
   stage: build
-  image: node:14
+  image: node:16
   tags:
     - docker
   needs: []
   rules:
-    - if: "$CI_MERGE_REQUEST_ID != null"
+    - if: "$CI_MERGE_REQUEST_ID != null || $CI_COMMIT_BRANCH == 'pipeline-build-with-gradle'"
       changes:
         - common/**/*
         - mobile/**/*
         - .gitlab-ci.yml
       when: always
   before_script:
+    - apt-get update -y
+    - apt-get install -y openjdk-11-jdk-headless
+    # install Android SDK: based upon https://about.gitlab.com/blog/2018/10/24/setting-up-gitlab-ci-for-android-projects/
+    - apt-get install -y wget tar unzip lib32stdc++6 lib32z1
+    - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_TOOLS}_latest.zip
+    - unzip -d android-sdk-linux android-sdk.zip
+    - export ANDROID_SDK_ROOT=$PWD/android-sdk-linux
+    - cd android-sdk-linux
+    - mv cmdline-tools latest && mkdir cmdline-tools && mv latest cmdline-tools/
+    - echo y | cmdline-tools/latest/bin/sdkmanager "platforms;android-${ANDROID_COMPILE_SDK}" >/dev/null
+    - echo y | cmdline-tools/latest/bin/sdkmanager "platform-tools" >/dev/null
+    - echo y | cmdline-tools/latest/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
+    - export PATH=$PATH:$PWD/platform-tools/
+    - set +o pipefail
+    - yes | cmdline-tools/latest/bin/sdkmanager --licenses >/dev/null
+    - set -o pipefail
+    - cd ../
+    # done installing Android SDK
     - npm install -g npm@$NPM_VERSION
     - cd mobile
     - npm uninstall @cbr/common
     - COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
     - npm install $COMMON_PACK_NAME
-    - npm ci
   script:
     - npx prettier --check .
-    - npx expo export --public-url https://ci-build.local
+    - npm run build debug dev
+    - mv android/app/build/outputs/apk/debug/app-debug.apk ../app-debug.apk
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - app-debug.apk
 
 build web:
   stage: build
-  image: node:14
+  image: node:16
   tags:
     - docker
   needs: []
@@ -121,7 +146,7 @@ build server:
 
 test common:
   stage: test
-  image: node:14
+  image: node:16
   tags:
     - docker
   needs: ["build common"]
