--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,7 +3,7 @@ djangorestframework==3.12.2
 django-cors-headers==3.6.0
 psycopg2-binary>=2.8
 gunicorn==20.0.4
-black==20.8b1
+black==22.3.0
 Pillow==8.1.0
 djangorestframework-simplejwt==4.6.0
 drf-spectacular==0.13.1
