--- a/mobile/package.json
+++ b/mobile/package.json
@@ -41,6 +41,8 @@
         "expo-task-manager": "~9.1.0",
         "expo-updates": "~0.5.4",
         "formik": "^2.2.9",
+        "in": "^0.19.0",
+        "mobile": "^0.0.1",
         "native-base": "^2.15.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
