--- a/mobile/package.json
+++ b/mobile/package.json
@@ -45,7 +45,7 @@
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-is-mounted-hook": "^1.1.1",
-        "react-native": "~0.63.4",
+        "react-native": "0.64",
         "react-native-background-timer": "^2.4.1",
         "react-native-checkbox-selection": "^1.1.0",
         "react-native-dotenv": "^3.2.0",
