reverted react-native version to ~0.63.4. issue with Pipeline

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -41,13 +41,11 @@
         "expo-task-manager": "~9.1.0",
         "expo-updates": "~0.5.4",
         "formik": "^2.2.9",
-        "in": "^0.19.0",
-        "mobile": "^0.0.1",
         "native-base": "^2.15.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-is-mounted-hook": "^1.1.1",
-        "react-native": "0.64",
+        "react-native": "~0.63.4",
         "react-native-background-timer": "^2.4.1",
         "react-native-checkbox-selection": "^1.1.0",
         "react-native-dotenv": "^3.2.0",
