Reverting changes to mobile/package.json

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,6 +7,7 @@
         "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz"
     },
     "dependencies": {
+        "@cbr/common": "file:cbr-common-1.0.0.tgz",
         "@expo/vector-icons": "^12.0.0",
         "@formatjs/intl-datetimeformat": "^4.1.6",
         "@formatjs/intl-displaynames": "^5.1.6",
@@ -40,11 +41,13 @@
         "expo-task-manager": "~9.1.0",
         "expo-updates": "~0.5.4",
         "formik": "^2.2.9",
+        "in": "^0.19.0",
+        "mobile": "^0.0.1",
         "native-base": "^2.15.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-is-mounted-hook": "^1.1.1",
-        "react-native": "^0.63",
+        "react-native": "~0.63.4",
         "react-native-background-timer": "^2.4.1",
         "react-native-checkbox-selection": "^1.1.0",
         "react-native-dotenv": "^3.2.0",
