--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,11 @@ variables:
   PROD_BRANCH: "production"
   NPM_VERSION: "7.19.0"
 
+.default_rules:
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+    - if: $CI_PIPELINE_SOURCE == "webide"
+
 build common:
   stage: build
   image: node:14
@@ -16,6 +21,7 @@ build common:
     - docker
   needs: []
   rules:
+    - !reference [.default_rules, rules]
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
         - common/**/*
@@ -36,6 +42,7 @@ build mobile:
     - docker
   needs: []
   rules:
+    - !reference [.default_rules, rules]
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
         - common/**/*
@@ -60,6 +67,7 @@ build web:
     - docker
   needs: []
   rules:
+    - !reference [.default_rules, rules]
     # build on merge requests if there are changes
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
@@ -96,6 +104,7 @@ build server:
     - docker
   needs: []
   rules:
+    - !reference [.default_rules, rules]
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
         - server/**/*
@@ -126,6 +135,7 @@ test common:
     - docker
   needs: ["build common"]
   rules:
+    - !reference [.default_rules, rules]
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
         - common/**/*
@@ -152,6 +162,7 @@ test caddy:
     - docker
   needs: []
   rules:
+    - !reference [.default_rules, rules]
     - if: "$CI_MERGE_REQUEST_ID != null"
       changes:
         - caddy/**/*
