Updated CI/CD to run a dummy task even if no other tasks should run

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,13 +9,6 @@ variables:
   PROD_BRANCH: "production"
   NPM_VERSION: "7.19.0"
 
-build info:
-  # Always runs: allows pipeline execution to happen even if no other pipeline tasks run.
-  rules:
-    - if: "$CI_MERGE_REQUEST_ID != null"
-  script:
-    echo "Pipeline Source  - $CI_PIPELINE_SOURCE"
-    echo "Merge Request ID - $CI_MERGE_REQUEST_ID"
 
 build common:
   stage: build
@@ -138,6 +131,20 @@ build server:
     - python manage.py check
     - python manage.py makemigrations --check
     - python manage.py test
+
+build info:
+  # Always runs: allows pipeline execution to happen even if no other tasks run.
+  stage: build
+  image: node:14
+  tags:
+    - docker
+  rules:
+    - if: $CI_PIPELINE_SOURCE != "push"
+  script:
+    - echo "This task give the CI/CD pipeline something to (almost always) run."
+    - echo "  CI_PIPELINE_SOURCE  = $CI_PIPELINE_SOURCE"
+    - echo "  CI_MERGE_REQUEST_ID = $CI_MERGE_REQUEST_ID"
+    - echo "  CI_COMMIT_BRANCH    = $CI_COMMIT_BRANCH"
 
 test common:
   stage: test
