--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -123,6 +123,17 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  */
 def enableHermes = project.ext.react.get("enableHermes", false);
 
+task getEnv(type: Exec) {
+    file("${buildDir}/../../../.env").readLines().each() {
+                def (key, value) = it.tokenize('=')
+                environment key, value
+                
+                rootProject.ext.set(key, value)
+            }   
+}
+
+// logger.debug('!!!!!!!!!!!!!!!!!!!!!!!!A debug log message.')
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -136,8 +147,14 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
-        versionName "1.0.1"
+        versionName "${rootProject.VERSION_NAME}"
         multiDexEnabled true
+        // commandLine 'echo', 'Hello world!'
+        // file('../../.env').readLines().each() {
+        //         def (key, value) = it.tokenize('=')
+        //         environment key, value
+        //     }
+            // println "Message: $versionName"
     }
     splits {
         abi {
