--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - build-docker
   - test
   - deploy
 
@@ -8,6 +9,21 @@ variables:
   STAGING_BRANCH: "staging"
   PROD_BRANCH: "production"
   NPM_VERSION: "7.19.0"
+
+build info:
+  # Always runs: allows pipeline execution to happen even if no other tasks run.
+  stage: build
+  image: alpine:latest
+  tags:
+    - docker
+  rules:
+    - if: $CI_PIPELINE_SOURCE != "push"
+  script:
+    - echo "This task give the CI/CD pipeline something to (almost always) run."
+    - echo "  CI_PIPELINE_SOURCE  = $CI_PIPELINE_SOURCE"
+    - echo "  CI_MERGE_REQUEST_ID = $CI_MERGE_REQUEST_ID"
+    - echo "  CI_COMMIT_BRANCH    = $CI_COMMIT_BRANCH"
+
 
 build common:
   stage: build
@@ -24,6 +40,8 @@ build common:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd common
@@ -48,6 +66,8 @@ build mobile:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd mobile
@@ -79,6 +99,8 @@ build web:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd common
@@ -115,6 +137,8 @@ build server:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
   variables:
     DOMAIN: "example.com"
     SECRET_KEY: "test"
@@ -131,19 +155,6 @@ build server:
     - python manage.py makemigrations --check
     - python manage.py test
 
-build info:
-  # Always runs: allows pipeline execution to happen even if no other tasks run.
-  stage: build
-  image: node:14
-  tags:
-    - docker
-  rules:
-    - if: $CI_PIPELINE_SOURCE != "push"
-  script:
-    - echo "This task give the CI/CD pipeline something to (almost always) run."
-    - echo "  CI_PIPELINE_SOURCE  = $CI_PIPELINE_SOURCE"
-    - echo "  CI_MERGE_REQUEST_ID = $CI_MERGE_REQUEST_ID"
-    - echo "  CI_COMMIT_BRANCH    = $CI_COMMIT_BRANCH"
 
 test common:
   stage: test
@@ -160,6 +171,8 @@ test common:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd common
@@ -189,54 +202,193 @@ test caddy:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
   variables:
     DOMAIN: "example.com"
   script:
     - caddy validate --config caddy/Caddyfile
 
-.deploy-script: &deploy-script
-  - cp /var/cbr/.env ./.env
-  - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml build
-  - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml up --force-recreate -d
-  - bash -c 'sleep 10'
-  - docker exec cbr_django python manage.py migrate
+# TODO: REMOVE ALL OF THIS!
+# .deploy-script: &deploy-script
+#   - cp /var/cbr/.env ./.env
+#   - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml build
+#   - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml up --force-recreate -d
+#   - bash -c 'sleep 10'
+#   - docker exec cbr_django python manage.py migrate
 
+# deploy development:
+#   environment:
+#     name: development
+#     url: https://cbr-dev.cmpt.sfu.ca
+#   stage: deploy
+#   tags:
+#     - deploy-development
+#   rules:
+#     - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $DEV_BRANCH"
+#       when: on_success
+#   script:
+#     - *deploy-script
+
+# deploy staging:
+#   environment:
+#     name: staging
+#     url: https://cbr-stg.cmpt.sfu.ca
+#   stage: deploy
+#   tags:
+#     - deploy-staging
+#   rules:
+#     - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $STAGING_BRANCH"
+#       when: on_success
+#   script:
+#     - *deploy-script
+
+# deploy production:
+#   environment:
+#     name: production
+#     url: https://cbr.hopehealthaction.org
+#   stage: deploy
+#   tags:
+#     - deploy-production
+#   rules:
+#     - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $PROD_BRANCH"
+#       when: manual
+#   script:
+#     - *deploy-script
+
+
+
+
+.deploy-script: &export_image_tag
+  # Set IMAGE_TAG to encode the date and SHA of the most recent commit.
+  - export IMAGE_TAG=v$(git show -s --format=%cs $CI_COMMIT_SHA).`git rev-parse --short=8 $CI_COMMIT_SHA`
+  # Display some useful info for understanding / debugging the pipeline
+  - echo "Docker hub user ='$HUB_USER',     version='$IMAGE_TAG'"
+  - echo "Full tag (backend) is               = $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG"
+  - echo "Full tag (rev-proxy & frontend) is  = $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG"
+  - docker images
+
+
+build-docker publish-docker-images:
+  stage: build-docker
+  tags:
+    # Run on CI/CD server so it does not interfere with containers in active use on dev server.
+    - deploy-dockerhub-shell
+  rules:
+    - if: "$CI_COMMIT_BRANCH == $DEV_BRANCH"
+    # TODO: REMOVE THIS!
+    - if: $CI_PIPELINE_SOURCE != "push"
+  script:
+    # Required environment variables defined by GitLab's settings:
+    #   HUB_USER:           Docker Hub user
+    #   HUB_TOKEN:          Docker Hub token (likely GitLab will "Mask")
+    #   HUB_REPO_BACKEND:   Docker Hub project name for backend
+    #   HUB_REPO_FRONTEND:  Docker Hub project name for frontend / caddy
+
+    # Build images (tagged by docker-composition*.yml using IMAGE_TAG)
+    - *export_image_tag
+    - docker compose -f docker-compose.yml -f docker-compose.deploy.yml build
+    
+    # Push images to Docker Hub 
+    - docker images
+    - docker login -u $HUB_USER -p $HUB_TOKEN
+    - docker push $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG
+    - docker push $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG
+    - docker logout
+
+    # Cleanup the image and any tags of that image
+    # Run on the CI/CD server, so it can force delete these images because it does not run any of them as containers
+    - docker images -a | grep -e "$HUB_REPO_BACKEND" -e "$HUB_REPO_FRONTEND" | awk '{print $3}' | xargs docker rmi --force
+    - docker images
+
+
+.deploy-script: &deploy-from-dockerhub
+  - *export_image_tag
+  - cp /var/cbr/.env ./.env
+  - docker compose -f docker-compose.yml -f docker-compose.deploy.yml pull
+  - docker compose -f docker-compose.yml -f docker-compose.deploy.yml up -d
+  - docker image prune -f      # remove unused images since we just downloaded new ones
+  - bash -c 'sleep 15'
+  - docker exec cbr_django python manage.py migrate
+  - docker images
+  - docker ps -a
+  - docker volume ls
+
+.deploy-script: &retag-and-upload-dockerhub
+  # Required environment variables passed into this function:
+  #   BRANCH_TAG:         Determined by which branch we are building off: "dev", "staging", "prod"
+  - *export_image_tag
+
+  # Download images (docker skips if already be present)
+  - echo "Trying to tag images of version '$IMAGE_TAG' with new tag '$BRANCH_TAG'"
+  - | 
+    echo "If you get 'Error response from daemon - manifest for ... not found - manifest unknown - manifest unknown'"
+    echo "   it likely means the pipeline did not build and deploy a docker image for this commit."
+    echo "   Was there a MR to this branch that did not get build for use on Dev server?"
+  - echo "Downloading image = $HUB_USER/$HUB_REPO_BACKEND, tag = $IMAGE_TAG'..."
+  - docker pull $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG
+  - docker pull $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG
+
+  # Retag
+  - docker tag $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG   $HUB_USER/$HUB_REPO_BACKEND:$BRANCH_TAG
+  - docker tag $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG  $HUB_USER/$HUB_REPO_FRONTEND:$BRANCH_TAG
+
+  # Upload tags
+  - docker images
+  - docker login -u $HUB_USER -p $HUB_TOKEN
+  - docker push $HUB_USER/$HUB_REPO_BACKEND:$BRANCH_TAG
+  - docker push $HUB_USER/$HUB_REPO_FRONTEND:$BRANCH_TAG
+  - docker logout
+
+  # Cleanup (if in use as a container this will fail, so we tolerate failures)
+  - docker rmi $HUB_USER/$HUB_REPO_BACKEND:$BRANCH_TAG || true
+  - docker rmi $HUB_USER/$HUB_REPO_FRONTEND:$BRANCH_TAG || true
+  - docker rmi $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG || true
+  - docker rmi $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG || true
+  - docker images
+
+  
 deploy development:
+  stage: deploy
   environment:
     name: development
     url: https://cbr-dev.cmpt.sfu.ca
-  stage: deploy
   tags:
     - deploy-development
+  variables:
+    BRANCH_TAG: "dev"
   rules:
-    - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $DEV_BRANCH"
-      when: on_success
+    - if: "$CI_COMMIT_BRANCH == $DEV_BRANCH"
   script:
-    - *deploy-script
+    # After images are built, deploy to dev-server & tag with "dev"
+    - *deploy-from-dockerhub
+    - *retag-and-upload-dockerhub
 
 deploy staging:
+  stage: deploy
   environment:
     name: staging
     url: https://cbr-stg.cmpt.sfu.ca
-  stage: deploy
   tags:
     - deploy-staging
+  variables:
+    BRANCH_TAG: "staging"
   rules:
-    - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $STAGING_BRANCH"
-      when: on_success
+    - if: "$CI_COMMIT_BRANCH == $STG_BRANCH"
+    # TODO: REMOVE THIS!
+    # - if: $CI_PIPELINE_SOURCE != "push"
   script:
-    - *deploy-script
+    - *deploy-from-dockerhub
+    - *retag-and-upload-dockerhub
 
 deploy production:
-  environment:
-    name: production
-    url: https://cbr.hopehealthaction.org
   stage: deploy
   tags:
-    - deploy-production
+    - deploy-dockerhub-shell
+  variables:
+    BRANCH_TAG: "prod"
   rules:
-    - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $PROD_BRANCH"
-      when: manual
+    - if: "$CI_COMMIT_BRANCH == $PROD_BRANCH"
   script:
-    - *deploy-script
-
+    - *retag-and-upload-dockerhub
+    # Production server's admin must manually log into the server and run the /root/update.sh script
