trigger Staging deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -378,7 +378,7 @@ deploy staging:
   rules:
     - if: "$CI_COMMIT_BRANCH == $STG_BRANCH"
     # TODO: REMOVE THIS!
-    # - if: $CI_PIPELINE_SOURCE != "push"
+    - if: $CI_PIPELINE_SOURCE != "push"
   script:
     - *deploy-from-dockerhub
     - *retag-and-upload-dockerhub
