--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,33 +50,33 @@ build common:
     - npx prettier --check .
     - npx tsc
 
-## REVISIT: UNCOMMENT THIS WHOLE SECTION
-# build mobile:
-#   stage: build
-#   image: node:14
-#   tags:
-#     - docker
-#   needs: []
-#   rules:
-#     - if: "$CI_MERGE_REQUEST_ID != null"
-#       changes:
-#         - common/**/*
-#         - mobile/**/*
-#         - .gitlab-ci.yml
-#       when: always
-#     # Always build/test for schedule / manual "Run Pipeline" via web
-#     - if: $CI_PIPELINE_SOURCE == "schedule"
-#     - if: $CI_PIPELINE_SOURCE == "web"
-#   before_script:
-#     - npm install -g npm@$NPM_VERSION
-#     - cd mobile
-#     - npm uninstall @cbr/common
-#     - COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
-#     - npm install $COMMON_PACK_NAME
-#     - npm ci
-#   script:
-#     - npx prettier --check .
-#     - npx expo export --public-url https://ci-build.local
+# REVISIT: UNCOMMENT THIS WHOLE SECTION
+build mobile:
+  stage: build
+  image: node:14
+  tags:
+    - docker
+  needs: []
+  rules:
+    - if: "$CI_MERGE_REQUEST_ID != null"
+      changes:
+        - common/**/*
+        - mobile/**/*
+        - .gitlab-ci.yml
+      when: always
+    # Always build/test for schedule / manual "Run Pipeline" via web
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+    - if: $CI_PIPELINE_SOURCE == "web"
+  before_script:
+    - npm install -g npm@$NPM_VERSION
+    - cd mobile
+    - npm uninstall @cbr/common
+    - COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
+    - npm install $COMMON_PACK_NAME
+    - npm ci
+  script:
+    - npx prettier --check .
+    - npx expo export --public-url https://ci-build.local
 
 build web:
   stage: build
@@ -170,8 +170,6 @@ test common:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
-    # TODO: REMOVE THIS!
-    - if: $CI_PIPELINE_SOURCE != "push"
   before_script:
     - npm install -g npm@$NPM_VERSION
     - cd common
@@ -201,62 +199,10 @@ test caddy:
     # Always build/test for schedule / manual "Run Pipeline" via web
     - if: $CI_PIPELINE_SOURCE == "schedule"
     - if: $CI_PIPELINE_SOURCE == "web"
-    # TODO: REMOVE THIS!
-    - if: $CI_PIPELINE_SOURCE != "push"
   variables:
     DOMAIN: "example.com"
   script:
     - caddy validate --config caddy/Caddyfile
-
-# TODO: REMOVE ALL OF THIS!
-# .deploy-script: &deploy-script
-#   - cp /var/cbr/.env ./.env
-#   - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml build
-#   - docker-compose -f docker-compose.yml -f docker-compose.deploy.yml up --force-recreate -d
-#   - bash -c 'sleep 10'
-#   - docker exec cbr_django python manage.py migrate
-
-# deploy development:
-#   environment:
-#     name: development
-#     url: https://cbr-dev.cmpt.sfu.ca
-#   stage: deploy
-#   tags:
-#     - deploy-development
-#   rules:
-#     - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $DEV_BRANCH"
-#       when: on_success
-#   script:
-#     - *deploy-script
-
-# deploy staging:
-#   environment:
-#     name: staging
-#     url: https://cbr-stg.cmpt.sfu.ca
-#   stage: deploy
-#   tags:
-#     - deploy-staging
-#   rules:
-#     - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $STG_BRANCH"
-#       when: on_success
-#   script:
-#     - *deploy-script
-
-# deploy production:
-#   environment:
-#     name: production
-#     url: https://cbr.hopehealthaction.org
-#   stage: deploy
-#   tags:
-#     - deploy-production
-#   rules:
-#     - if: "$CI_MERGE_REQUEST_ID == null && $CI_COMMIT_BRANCH == $PROD_BRANCH"
-#       when: manual
-#   script:
-#     - *deploy-script
-
-
-
 
 .deploy-script: &export_image_tag
   # Set IMAGE_TAG to encode the date and SHA of the most recent commit.
@@ -283,10 +229,6 @@ build-docker publish-docker-images:
     #   HUB_TOKEN:          Docker Hub token (likely GitLab will "Mask")
     #   HUB_REPO_BACKEND:   Docker Hub project name for backend
     #   HUB_REPO_FRONTEND:  Docker Hub project name for frontend / caddy
-
-    # TODO: REMOVE
-    - pwd
-    - ls -la
 
     # Build images (tagged by docker-composition*.yml using IMAGE_TAG)
     - *export_image_tag
@@ -362,14 +304,10 @@ deploy development:
     BRANCH_TAG: "dev"
   rules:
     - if: "$CI_COMMIT_BRANCH == $DEV_BRANCH"
-    # TODO: REMOVE THIS!
-    # - if: $CI_PIPELINE_SOURCE != "push"
   script:
-    echo "COMMENTED OUT DEV DEPLOYMENT"
-    # TODO: ADD BACK IN!
-    # # After images are built, deploy to dev-server & tag with "dev"
-    # - *deploy-from-dockerhub
-    # - *retag-and-upload-dockerhub
+    # After images are built, deploy to dev-server & tag with "dev"
+    - *deploy-from-dockerhub
+    - *retag-and-upload-dockerhub
 
 deploy staging:
   stage: deploy
